# angel

./: '  .gitignore  .gitmodules  Angel.cpp  Angel.hpp  CMakeLists.txt  README.org  compile_flags.txt  demo.cpp  run.sh
examples/: demo.cpp
include/: Angel.hpp
src/: Angel.cpp
